Use display instead of visibility to fix wrongly visible elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,19 +82,19 @@ body {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	background-color: antiquewhite;
 
-	--stone-visible: hidden;
-	--income-visible: hidden;
-	--craft-speed-visible: hidden;
-	--research-speed-visible: hidden;
-	--assign-visible: hidden;
-	--research-visible: hidden;
-	--chaos-visible: hidden;
-	--mentor-visible: hidden;
-	--manager-visible: hidden;
-	--fisherman-visible: hidden;
-	--miner-visible: hidden;
-	--blacksmith-visible: hidden;
-	--professor-visible: hidden;
+	--stone-display: none;
+	--income-display: none;
+	--craft-speed-display: none;
+	--research-speed-display: none;
+	--assign-display: none;
+	--research-display: none;
+	--chaos-display: none;
+	--mentor-display: none;
+	--manager-display: none;
+	--fisherman-display: none;
+	--miner-display: none;
+	--blacksmith-display: none;
+	--professor-display: none;
 }
 
 main {
@@ -135,19 +135,19 @@ header {
 }
 
 .income {
-	visibility: var(--income-visible);
+	display: var(--income-display);
 }
 
 .stone {
-	visibility: var(--stone-visible);
+	display: var(--stone-display);
 }
 
 .craft-speed {
-	visibility: var(--craft-speed-visible);
+	display: var(--craft-speed-display);
 }
 
 .research-speed {
-	visibility: var(--research-speed-visible);
+	display: var(--research-speed-display);
 }
 
 /* #endregion */
@@ -178,11 +178,11 @@ header {
 }
 
 #assign + label {
-	visibility: var(--assign-visible);
+	display: var(--assign-display);
 }
 
 #research + label {
-	visibility: var(--research-visible);
+	display: var(--research-display);
 }
 
 #interface > input[type="radio"]:checked + label {
@@ -202,43 +202,43 @@ header {
 	padding: 0.2rem 0.5rem;
 }
 
-#assign-tab > table > tbody > tr > td:first-child {
+#assign-tab > table > tbody > tr > :first-child {
 	text-align: right;
 }
 
-#assign-tab > table > tbody > tr > td:last-child {
+#assign-tab > table > tbody > tr > :last-child {
 	text-align: center;
 }
 
 #assign-tab > table > thead > tr > :nth-child(3),
 #assign-tab > table > tbody > tr > :nth-child(3) {
-	visibility: var(--mentor-visible);
+	display: var(--mentor-display);
 }
 
 #assign-tab > table > thead > tr > :nth-child(4),
 #assign-tab > table > tbody > tr > :nth-child(4) {
-	visibility: var(--manager-visible);
+	display: var(--manager-display);
 }
 
-td:last-child,
-th:last-child {
-	visibility: var(--chaos-visible);
+#assign-tab > table > thead > tr > :last-child,
+#assign-tab > table > tbody > tr > :last-child {
+	display: var(--chaos-display);
 }
 
-.fisherman td {
-	visibility: var(--fisherman-visible);
+.fisherman {
+	display: var(--fisherman-display);
 }
 
-.miner td {
-	visibility: var(--miner-visible);
+.miner {
+	display: var(--miner-display);
 }
 
-.blacksmith td {
-	visibility: var(--blacksmith-visible);
+.blacksmith {
+	display: var(--blacksmith-display);
 }
 
-.professor td {
-	visibility: var(--professor-visible);
+.professor {
+	display: var(--professor-display);
 }
 
 /* #endregion */
